# ANNarchy-iCub

./: .gitignore  .gitmodules  Interface_iCub_ANN.code-workspace  Joint_Reader.pxd  Joint_Reader.pyx  Joint_Writer.pyx  Makefile  Makefile.template  README.md  ReadMe.md  Skin_Reader.pxd  Skin_Reader.pyx  Visual_Reader.pyx  _spread_version.py  annotated_dup.js  auto_test.py  build_config.toml  dir_696b46a6762280e55d15c14b1887b2c0_dep.md5  dir_79cf02b246d648b1e31867798fe06f31.html  dir_819031b15a3e935272df7b746d2dbe1a.html  doxygen.css  doxygen_crawl.html  functions.html  functions_a.html  functions_b.html  functions_dup.js  functions_e.html  functions_func.html  functions_func_g.html  functions_func_s.html  functions_func_w.html  functions_i.html  functions_j.html  functions_p.html  functions_r.html  functions_s.html  functions_u.html  functions_vars.html  hierarchy.html  hierarchy.js  (+34 more)
ANN_iCub_Interface/: Special_Features.py  Special_Features.pyi  Vocabs.py  Vocabs.pyi  __init__.py  __init__.pyi  _version.txt  use_grpc.pyi
Cython_ext/: Joint_Reader.pxd  Joint_Reader.pyx  Joint_Writer.pxd  Joint_Writer.pyx  Master_Clock.pyx  Module_Base_Class.pxd  Skin_Reader.pxd  Skin_Reader.pyx  Visual_Reader.pxd  Visual_Reader.pyx  iCub_Interface.pxd  iCub_Interface.pyx
Testfiles/: auto_test.py  parameter_object_images.py  performance_test.py  simple_call_test.py  simple_test_grpc.py  simple_test_grpc_sep_ANN.py  simple_test_grpc_sep_icub.py  simple_test_xml_init.py  test_hand_orientation.py  test_plot.py  test_save_position.py  testing_parameter.py
data/: default_robot.xml  (+4 more)
(+2436 files in other folders)
